Reemove InspectionSheet entity
