# docs/swagger.yml
@@ -28,7 +28,7 @@ paths:
     post:
       tags:
         - inspection sheets
-      summary: Create a new InspectionSheetDetail model
+      summary: Create a new InspectionSheet model
       description: ""
       parameters: []
       requestBody:
@@ -36,14 +36,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/InspectionSheetDetail"
+              $ref: "#/components/schemas/InspectionSheet"
       responses:
         "201":
           description: Single InspectionSheet model
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/InspectionSheetDetail"
+                $ref: "#/components/schemas/InspectionSheet"
         "400":
           description: バリデーションエラー or 業務エラー Bad Request
         "500":
@@ -63,11 +63,11 @@ paths:
             type: integer
       responses:
         "200":
-          description: A JSON InspectionSheetDetail model
+          description: A JSON InspectionSheet model
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/InspectionSheetDetail"
+                $ref: "#/components/schemas/InspectionSheet"
         "400":
           description: IDが設定されていない Bad Request
         "500":
@@ -75,7 +75,7 @@ paths:
     put:
       tags:
         - inspection sheets
-      summary: Updates the InspectionSheetDetail model.
+      summary: Updates the InspectionSheet model.
       description: ""
       parameters:
         - name: sheet_id
@@ -89,14 +89,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/InspectionSheetDetail"
+              $ref: "#/components/schemas/InspectionSheet"
       responses:
         "201":
           description: 正常系（非同期）Created
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/InspectionSheetDetail"
+                $ref: "#/components/schemas/InspectionSheet"
         "400":
           description: "Invalid ID supplied"
         "404":
@@ -609,6 +609,7 @@ components:
         - inspection_type
         - inspection_group_id
         - inspection_group
+        - equipments
       properties:
         sheet_id:
           type: integer
@@ -625,26 +626,6 @@ components:
           format: int64
         inspection_group:
           type: string
-    InspectionSheetDetail:
-      type: object
-      required:
-        - sheet_id
-        - sheet_name
-        - inspection_type_id
-        - inspection_group_id
-        - equipments
-      properties:
-        sheet_id:
-          type: integer
-          format: int64
-        sheet_name:
-          type: string
-        inspection_type_id:
-          type: integer
-          format: int64
-        inspection_group_id:
-          type: integer
-          format: int64
         equipments:
           type: array
           items:
