# src/ClientApp/src/entities/index.ts
@@ -1,4 +1,3 @@
-export * from "./InspectionSheet";
 export * from "./InspectionItemReducer";
 export * from "./InspectionSheetReducer";
 export * from "./ItemType";
