# src/ClientApp/src/typescript-fetch/models/InspectionSheetDetail.ts
@@ -1,95 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * API Specification
- * クライアント-サーバー間のデータ通信仕様
- *
- * The version of the OpenAPI document: 0.4.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import {
-    Equipment,
-    EquipmentFromJSON,
-    EquipmentFromJSONTyped,
-    EquipmentToJSON,
-} from './Equipment';
-
-/**
- * 
- * @export
- * @interface InspectionSheetDetail
- */
-export interface InspectionSheetDetail {
-    /**
-     * 
-     * @type {number}
-     * @memberof InspectionSheetDetail
-     */
-    sheetId: number;
-    /**
-     * 
-     * @type {string}
-     * @memberof InspectionSheetDetail
-     */
-    sheetName: string;
-    /**
-     * 
-     * @type {number}
-     * @memberof InspectionSheetDetail
-     */
-    inspectionTypeId: number;
-    /**
-     * 
-     * @type {number}
-     * @memberof InspectionSheetDetail
-     */
-    inspectionGroupId: number;
-    /**
-     * 
-     * @type {Array<Equipment>}
-     * @memberof InspectionSheetDetail
-     */
-    equipments: Array<Equipment>;
-}
-
-export function InspectionSheetDetailFromJSON(json: any): InspectionSheetDetail {
-    return InspectionSheetDetailFromJSONTyped(json, false);
-}
-
-export function InspectionSheetDetailFromJSONTyped(json: any, ignoreDiscriminator: boolean): InspectionSheetDetail {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'sheetId': json['sheet_id'],
-        'sheetName': json['sheet_name'],
-        'inspectionTypeId': json['inspection_type_id'],
-        'inspectionGroupId': json['inspection_group_id'],
-        'equipments': ((json['equipments'] as Array<any>).map(EquipmentFromJSON)),
-    };
-}
-
-export function InspectionSheetDetailToJSON(value?: InspectionSheetDetail | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'sheet_id': value.sheetId,
-        'sheet_name': value.sheetName,
-        'inspection_type_id': value.inspectionTypeId,
-        'inspection_group_id': value.inspectionGroupId,
-        'equipments': ((value.equipments as Array<any>).map(EquipmentToJSON)),
-    };
-}
-
